# rust-wasm-image-ascii

./: Cargo.toml  README.md  gray.html  index.html  test.html
pkg/: README.md  package.json  rust_wasm_image_ascii.d.ts  rust_wasm_image_ascii.js  rust_wasm_image_ascii_bg.wasm  rust_wasm_image_ascii_bg.wasm.d.ts
src/: lib.rs  utils.rs
src/tai/: README.md  main.rs  mod.rs  utils.rs
src/tai/arguments/: argument_parsing.rs  config.rs  mod.rs
src/tai/operations/: ascii.rs  braille.rs  dither.rs  mod.rs  onechar.rs  otsu_threshold.rs
