[package]
name = "rust-wasm-image-ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
serde_json = "1.0.83"
serde = { version = "1.0.138", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
image = "0.24.3"
web-sys = { version = "0.3.58", features = ["console"] }

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[lib]
crate-type = ["cdylib"]
